--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.9",
   "description": "Serialize/Deserialize objects maintaning references (circular refs too",
   "repository": "github:lwoites/picklejs",
-  "main": "pickle.js",
+  "main": "picklify.js",
+  "files": ["picklify.js"],
   "scripts": {
     "test": "mocha"
   },
