--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Serialize/Deserialize objects maintaning references (circular refs too)",
   "repository": "github:lwoites/picklejs",
   "main": "picklify.js",
-  "files": ["picklify.js"],
+  "files": [
+    "picklify.js"
+  ],
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc --reporter=html --reporter=text  mocha"
   },
   "keywords": [
     "serialize",
@@ -14,12 +17,12 @@
   ],
   "author": "Lautaro Woites",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint": "^4.19.1",
     "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
     "mocha": "^5.0.5",
-    "eslint-config-google": "^0.9.1"
+    "nyc": "^12.0.2"
   }
 }
