--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
-language: node_js
-script: npm run coverage
+language:
+  node_js
+install:
+  - npm install -g codecov
+script:
+  - nyc report --reporter=text-lcov > coverage.lcov && codecov
