--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ node_js:
 install:
   - npm install -g codecov
 script:
-  - nyc report --reporter=text-lcov > coverage.lcov && codecov
+  - npm test
+after_success:
+  - npm run CICoverage
