--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "deserialize"
   ],
   "author": "Lautaro Woites",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "dependencies": {},
   "devDependencies": {
     "chai": "^4.1.2",
